<?xml version="1.0"?>
<package>
  <name>uarm</name>
  <version>0.0.0</version>
  <description>The uarm package</description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/OTL/uarm</url>
  <author email="t.ogura@gmail.com">Takashi Ogura</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
